sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:19: error: not found: type int
def minTableau(n:int):int ={
                      ^AlgSelectionSort:19: error: not found: type int
def minTableau(n:int):int ={
                 ^